# SEDP

./: .gitignore  CMakeLists.txt
assignment_1/montecarlopi/: montecarlopi.cpp  montecarlopi.txt
assignment_1/palindrome-checker/: palindrome-checker.cpp  palindromes_tiny.txt
assignment_1/syntactic_sugar/: syntax.cpp
assignment_2/graph/: Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  graph-test.cpp
assignment_2/particles/: particle.cpp  particle.h
assignment_2/regex-filter/: regex-filter.cpp  test.sh
assignment_2/runner/: errors.txt  runner.cpp
assignment_3/: CMakeLists.txt
assignment_3/integration/: integration.cpp
assignment_3/modcounter/: modcounter.cpp  modulocounter.cpp  modulocounter.h  test.cpp
assignment_3/tea/: tea_filebuf-test.cpp  tea_filebuf.cpp  tea_filebuf.h
assignment_3/token_iterator/: token_iterator.cpp
